recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: reassignment to val
    length = length / levels;
           ^